[package]
name = "tokenreplace"
version = "0.1.0"
authors = ["Phantomical <phantom@lynches.ca>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = [ "parsing" ] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
linkme = "0.2" # Used for doc examples
